# phoenix_ml

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  _runner.py  app.py  dataset_generation.py  phoenix_ml.bat  pyproject.toml
.github/workflows/: tests.yml
examples/: DC_Motors_Dataset_Generation.py  README.md
examples/Original Datasets/: DC_Motor_Dataset.csv
phoenix_ml/: __init__.py  cli.py  data_preprocessing.py  dataset_cleaning.py  hyperparameter_optimisation.py  interpretability.py  model_training.py  models.py  orange_theme.json  pareto_analysis.py  persistence.py  physics_expressions.py  physics_model.py  postprocessing.py  progress.py  report_generation.py  sensitivity_analysis.py  system_info.py  ui.py  uncertainty_quantification.py  validation.py  workflow.py  workflow_steps.py
phoenix_ml/examples/: DC_Motors_Dataset_Generation.py  README.md
phoenix_ml/examples/Original Datasets/: gt_2015.csv
tests/: ISSUES.md  README.md  conftest.py  test_data_preprocessing.py  test_dataset_cleaning.py  test_hostile_datasets.py  test_hyperparameter_optimisation.py  test_input_robustness.py  test_interpretability.py  test_model_training.py  test_models.py  test_package_init.py  test_pareto_analysis.py  test_persistence.py  test_physics_expressions.py  test_physics_model.py  test_postprocessing.py  test_report_generation.py  test_sensitivity_analysis.py  test_ui.py  test_uncertainty_quantification.py  test_workflow_smoke.py  test_workflow_steps.py
